# council

./: .gitignore  Makefile  README.md  dev-requirements.txt  env.example  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: build_doc.yml  lint.yml  release.yaml  unit_test.yml
council/: __init__.py
council/agent/: agent.py
council/agent_tests/: __init__.py  agent_tests.py
council/agents/: __init__.py  agent.py  agent_chain.py  agent_result.py
council/chains/: __init__.py  chain.py  chain_base.py
council/contexts/: __init__.py  _agent_context.py  _agent_context_store.py  _agent_iteration_context_store.py  _budget.py  _cancellation_token.py  _chain_context.py  _chat_history.py  _chat_message.py  _composite_message_collection.py  _context_base.py  _context_logger.py  _execution_context.py  _execution_log.py  _execution_log_entry.py  _llm_context.py  _message_collection.py  _message_list.py  _monitor.py  _monitorable.py  _monitored.py  _monitored_budget.py  _monitored_message_list.py  _scorer_context.py  _skill_context.py  execution_context.py  messages.py
council/controller/: __init__.py  basic_controller.py  llm_controller.py
council/controllers/: __init__.py  basic_controller.py  controller_base.py  execution_unit.py  llm_answer.py  llm_controller.py
council/core/: __init__.py  agent.py  agent_chain.py  budget.py  cancellation_token.py  chain.py  execution_context.py  execution_unit.py  runners.py  scorer_base.py
council/evaluator/: llm_evaluator.py
council/evaluators/: __init__.py  basic_evaluator.py  evaluator_base.py  llm_evaluator.py
council/filters/: __init__.py  basic_filter.py  filter_base.py  llm_filter.py
council/llm/: __init__.py  anthropic.py  anthropic_completion_llm.py  anthropic_llm.py  anthropic_llm_configuration.py  anthropic_messages_llm.py  azure_chat_gpt_configuration.py  azure_configuration.py  azure_llm.py  azure_llm_configuration.py  chain.py  chat_gpt_configuration.py  gemini_llm.py  gemini_llm_configuration.py  groq_llm.py  groq_llm_configuration.py  llm_answer.py  (+22 more)
council_ai/: __init__.py
design/: runners.md
docs/: .readthedocs.yaml  README.md  docker-compose.yaml  dockerfile  requirements.txt
stubs/: GoogleNews.pyi
tests/: __init__.py
(+576 files in other folders)
