[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "council-ai"
version = "0.0.2"
description = "to do"
readme = "README.md"
requires-python = ">=3.9"

dynamic = ["dependencies"]

[tool.hatch.build]
exclude = [
    ".github",
    "*-requirements.txt",
    "tests",
    "venv",
]

package = ['council_ai']

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format="[%(asctime)s %(levelname)s %(threadName)s %(name)s:%(funcName)s:%(lineno)s] %(message)s"
log_cli_date_format="%Y-%m-%d %H:%M:%S%z"

[tool.ruff]
exclude = ["__init__.py", "docs"]
line-length = 120

[tool.mypy]
exclude = "(?x)(venv|docs)"
mypy_path= "./stubs"
explicit_package_bases = "true"
